# hackthecr-us

./: .env  .gitignore  Cargo.toml  README.md  TODO.md  docker-compose.yml
.github/workflows/: test.yml
api/: .env  Cargo.toml
api/src/: app.rs  config.rs  error.rs  http.rs  main.rs  router.rs  sse.rs  ssh.rs  tracing.rs
api/src/admins/: service.rs
api/src/batches/: mod.rs  service.rs
api/src/events/: mod.rs  scraping_channel.rs
api/src/meals/: mod.rs  router.rs  service.rs
api/src/meals/handlers/: get_meals.rs  mod.rs  put_meals.rs
api/src/restaurants/: mod.rs  router.rs  service.rs
api/src/restaurants/handlers/: get_restaurants.rs  mod.rs  put_restaurants.rs
cli/: Cargo.toml  README.md  install.sh
cli/src/: config.rs  crous.rs  main.rs
cli/src/actions/: config_gen.rs  meals.rs  mod.rs  restaurants.rs  schedule.rs
cli/src/client/: mod.rs  restaurants.rs
cli/src/data/: crous.json
client/: .cta.json  components.json  package.json  pnpm-lock.yaml
client/src/: styles.css
client/src/routes/: index.tsx
core/: Cargo.toml
core/src/: lib.rs
core/src/models/: keywords.rs  meals.rs  mod.rs  restaurants.rs
core/src/sources/: meals.rs  mod.rs  restaurants.rs  schools.rs
crawler/: Cargo.toml
crawler/src/: lib.rs  restaurant_page.rs  school_api.rs
crawler/src/snapshots/: crawler__restaurant_list__tests__restaurant_list_scraper.snap  crawler__restaurant_list__tests__restaurant_list_scraper_bfc.snap  crawler__restaurant_page__tests__restaurant_page_scraper.snap  crawler__restaurant_page__tests__restaurant_page_scraper_sevenans.snap
crousty/: Cargo.toml
crousty/src/: commands.rs  main.rs
htc/: Cargo.toml  README.md
htc/src/: client.rs  id.rs  lib.rs  verifiable.rs
htc/src/data/: crous.json
htc/src/models/: admins.rs  keywords.rs  meals.rs  mod.rs  restaurants.rs  schools.rs  scrape_batch.rs
htc/src/sources/: meals.rs  mod.rs  restaurants.rs  schools.rs
htc/tests/: private_key.der  private_key.pem  public_key.der  public_key.pem
macros/: Cargo.toml
macros/src/: lib.rs
migrations/: 20260216130418_init.sql  20260225175747_create-public-key.sql
scraper/: Cargo.toml
scraper/src/: lib.rs  restaurant_list.rs  restaurant_page.rs  school_api.rs
scraper/src/snapshots/: scraper__restaurant_list__tests__restaurant_list_scraper.snap  scraper__restaurant_list__tests__restaurant_list_scraper_bfc.snap  scraper__restaurant_page__tests__restaurant_page_scraper.snap  scraper__restaurant_page__tests__restaurant_page_scraper_sevenans.snap
scraper/src/stubs/: brasserie-triolet.html  ou-manger-bfc.html  ou-manger.html  sevenans.html
