[workspace]
resolver = "3"
members = ["api", "cli", "core", "macros", "scraper"]

[workspace.package]
edition="2024"
version = "5.1.0"
authors = ["courtcircuits <radulescutristan@proton.me>"]
license = "Apache-2.0"

[workspace.dependencies]
serde_json = "1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.6", features = ["uuid", "postgres", "runtime-tokio", "chrono"] }
thiserror = "2.0.18"
clap = { version = "4.5.59", features = ["derive", "env"] }
utoipa = "5.4.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
