[workspace]
resolver = "3"
members = ["api", "cli", "crousty", "htc", "macros", "crawler"]

[workspace.package]
edition="2024"
version = "5.1.0"
authors = ["courtcircuits <radulescutristan@proton.me>"]
license = "Apache-2.0"

[workspace.dependencies]
serde_json = "1"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.6", features = ["uuid", "postgres", "runtime-tokio", "chrono"] }
thiserror = "2.0.18"
clap = { version = "4.5.59", features = ["derive", "env"] }
utoipa = "5.4.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
base64 = "0.22.1"
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
tracing-opentelemetry = "0.32"
tracing-core = "0.1.36"
reqwest = { version = "0.12.5", features = ["native-tls-vendored", "json"] }
