[package]
name = "api"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.8"
dotenv = { version = "0.15.0", features = ["clap"] }
utoipa = "5.4.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
htc = { package = "htc", path = "../htc" }
reqwest = { version = "0.12.5", features = ["native-tls-vendored"] }
sqlx.workspace = true
clap.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
uuid = { version = "1", features = ["v4"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "tracing-log"] }
tokio-stream = { version = "0.1", features = ["sync"] }
