[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
htc_core = { package = "core", path = "../core" }
macros = { path = "../macros" }
scraper = { path = "../scraper" }
tabled = "0.20.0"
reqwest = { version = "0.12.5", features = ["native-tls-vendored"] }
tokio.workspace = true
thiserror.workspace = true
clap.workspace = true
serde_json.workspace = true
