[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
htc = { package = "htc", path = "../htc" }
scraper = { path = "../scraper" }
tabled = "0.20.0"
reqwest = { version = "0.12.5", features = ["native-tls-vendored", "json"] }
base64.workspace = true
tokio.workspace = true
thiserror.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34"
rcgen = "0.14.7"
futures = "0.3.32"
zenity = "3.6.1"
color-print = "0.3.7"
