[package]
name = "cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
htc = { package = "htc", path = "../htc" }
crawler = { path = "../crawler" }
tabled = "0.20.0"
reqwest.workspace = true
base64.workspace = true
tokio = { workspace = true, features = ["signal"] }
chrono = { version = "0.4", features = ["clock"], default-features = false }
thiserror.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34"
rcgen = "0.14.7"
futures = "0.3.32"
zenity = "3.6.1"
color-print = "0.3.7"
cron-parser = "0.11.2"
