[package]
name = "crousty"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
htc = { package = "htc", path = "../htc" }
tokio.workspace = true
dotenv = "0.15.0"
poise = "0.6.1"
tracing.workspace = true
tracing-subscriber.workspace = true
