[package]
name = "htc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
utoipa.workspace = true
utoipa-scalar.workspace = true
thiserror.workspace = true
crawler = { path = "../crawler" }
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "pem"] }
macros = { path = "../macros" }
sha2 = "0.10.9"
base64.workspace = true
reqwest.workspace = true
